fixed it just to break the one that was working lolol

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -556,7 +556,7 @@ border: width 0.1em;
     "a6";
 
     gap: 3px;
-    z-index: -2;
+    z-index: 0;
 }
 
 .article > .author > a {
